Make fretboard mobile-friendly with horizontal scrolling and touch/drag support

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
         </div>
 
         <div class="neck-container">
-            <canvas id="guitar-neck" width="1300" height="300"></canvas>
+            <div class="neck-wrapper">
+                <canvas id="guitar-neck" width="2000" height="300"></canvas>
+            </div>
         </div>
 
         <div class="legend">
@@ -163,7 +165,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
+<!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
             <p>Made with <span class="heart">♥</span> by Nathan A.M.</p>
